connected with me

--- a/index.html
+++ b/index.html
@@ -790,11 +790,21 @@ print(f"Is 'abc.def.ghi.jkl' valid? {is_valid_ipv4('abc.def.ghi.jkl')}") # False
         </div>
 
         <div class="slide title-slide">
-            <h1 class="thank-you">Thank You!</h1>
-            <p class="questions">Any Questions?</p>
-            <p class="details">Sanesh Kumar | Government Engineering College Lakhisarai</p>
-            <p class="details">sanesh.cse.ai@example.com (Replace with actual email if desired)</p>
-            <p class="details">Connect with me: [Your LinkedIn/GitHub Profile Link]</p>
+            
+
+            <h2>Thank You!</h2>
+
+            <p><strong>Key Takeaway:</strong> Completed Python Essentials 1 and gained strong foundational knowledge in Python including variables, loops, functions, and more.</p>
+
+            <blockquote>“Learning to write programs stretches your mind and helps you think better.” — Bill Gates</blockquote>
+
+            <p><strong>Sanesh Kumar</strong><br>
+            Government Engineering College, Lakhisarai</p>
+            <p class="details">Connect with me:</p>
+            <p>📧 Email: <a href="mailto:sanesh7644@gmail.com">sanesh7644@gmail.com</a><br>
+            🔗 GitHub: <a href="https://github.com/sanesh7644" target="_blank">github.com/sanesh7644</a><br>
+            🔗 LinkedIn: <a href="https://www.linkedin.com/in/sanesh-kumar-1802b1293" target="_blank">linkedin.com/in/sanesh-kumar-1802b1293</a></p>
+
         </div>
 
     </div>
